--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <link href="javascript/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" media="screen">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/styles.css" rel="stylesheet" type="text/css" media="screen">
     <title>Blair Peterson</title>
   </head>
   <body>
-    <div class="navbar navbar-fixed-top">
-      <div class="container">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand text-muted" href="#">
+    <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <a class="navbar-brand text-muted" href="#">Blair Peterson</a>
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
               <li class="active"><a href="#">Home</a></li>
@@ -27,7 +30,7 @@
                 <ul class="dropdown-menu">
                   <li><a href="#">Current Project</a></li>
                   <li class="divider"></li>
-                  <li><a href="#">Recent Projects</a></li>
+                  <li><a href="#">Older Projects</a></li>
                   <li class="divider"></li>
                   <li><a href="#">Favorites</a></li>
                 </ul>
@@ -35,6 +38,7 @@
             </ul>
           </div>
         </div>
-      </div>
+      </nav>
+      
   </body>
 </html>
