--- a/index.html
+++ b/index.html
@@ -39,6 +39,11 @@
           </div>
         </div>
       </nav>
-      
+
+      <div class="footer">
+        <div class="container">
+          <p>&copy; Blair Peterson</p>
+        </div>
+      </div>
   </body>
 </html>
