--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         </div>
       </nav>
 
+      <div class="jumbotron">
+        <div class="container">
+          <div class="main">
+            <h1>Design your future</h1>
+            <h3>(or some other corny tag line)</h3>
+          </div>
+        </div>
+      </div>
+
       <div class="footer">
         <div class="container">
           <p>&copy; Blair Peterson</p>
