--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     <div class="jumbotron">
       <div class="container">
       <a name="projects"><h1>Projects</h1></a>
-      <p>Taking a Vacation</p>
-      <p>Cupcake Shop</p>
+      <a href="http://waitbutmetho.github.io/vacation/"><p>Taking a Vacation</p></a>
+      <a href="http://michaeldada.github.io/cupcake/"><p>Cupcake Shop</p></a>
      </div>
     </div>
 
